[package]
name = "Dioxus-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
wasm-bindgen = "0.2.85"
js-sys = "0.3.64"
gloo-utils = "0.2.0"
gloo = "0.3"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'NodeList',
  'Node',
  'Window',
]
